# Schemebot

./: .gitignore  README.md  SETUP_CHECKLIST.md
backend/: .env.example  alembic.ini  arq_app.py  pyproject.toml  requirements.txt  schema.sql
backend/.mypy_cache/3.11/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  dataclasses.data.json  dataclasses.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  ntpath.data.json  ntpath.meta.json  pathlib.data.json  pathlib.meta.json  posixpath.data.json  posixpath.meta.json  re.data.json  re.meta.json  (+14 more)
backend/.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
backend/.mypy_cache/3.11/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
backend/.mypy_cache/3.11/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
backend/.mypy_cache/3.11/os/: path.data.json  (+3 more)
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_fts_indexes.py  0003_add_composite_indexes.py  0004_add_embedding_column.py
backend/app/: main.py
backend/app/ai/: circuit_breaker.py  cost_tracker.py  guardrails.py  input_sanitizer.py  memory.py  prompt_cache.py
backend/app/core/: config.py  database.py  exceptions.py  jwt_keys.py  logging.py  metrics.py  redis_client.py  security.py  supabase_client.py
backend/app/models/: analytics.py  conversation.py  document.py  legal.py  scheme.py  scraping.py  user.py
backend/app/repositories/: base.py  conversation_repo.py  scheme_repo.py  user_repo.py
backend/app/schemas/: admin.py  auth.py  chat.py  document.py  scheme.py
backend/app/scraper/: ai_extractor.py  change_detector.py  engine.py  parser.py  scheduler.py
backend/app/services/: async_pdf_processor.py  auth_service.py  cache_service.py  document_service.py  eligibility_evaluator.py  email_service.py  password_reset_service.py  scheme_service.py
backend/tests/: conftest.py  mocks.py  test_api.py  test_auth.py  test_eligibility_evaluator.py  test_password_reset.py  test_rag.py  test_schemes.py  test_security.py  test_streaming.py
(+121 files in other folders)
