[project]
name = "govscheme-ai"
version = "0.1.0"
description = "AI-powered civic platform for Indian government welfare scheme discovery"
requires-python = ">=3.11"
authors = [{ name = "GovScheme AI" }]

dependencies = [
    # Framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "supabase==2.12.0",
    "pgvector==0.3.6",

    # Auth
    "pyjwt[crypto]==2.10.1",
    "bcrypt==4.2.1",
    "cryptography==44.0.0",

    # Redis + Queue
    "redis[hiredis]==5.2.1",
    "arq==0.26.1",

    # AI / LLM
    "openai==1.59.3",
    "google-genai==1.3.0",
    "anthropic==0.49.0",

    # Embeddings + RAG
    "sentence-transformers==3.4.1",
    "torch==2.5.1",
    "transformers==4.48.0",

    # Document Processing
    "pymupdf==1.25.2",
    "python-docx==1.1.2",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "pytesseract==0.3.13",
    "pillow==11.1.0",
    "paddlepaddle==2.6.2",
    "paddleocr==2.9.1",

    # Web Scraping
    "playwright==1.49.1",
    "trafilatura==2.0.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "duckduckgo_search==7.5.0",
    "fake-useragent==2.2.0",

    # Text Processing
    "nltk==3.9.1",
    "langdetect==1.0.9",

    # Utilities
    "python-decouple==3.8",
    "python-dateutil>=2.9.0",
    "tenacity==9.0.0",
    "orjson==3.10.12",
    "structlog==24.4.0",

    # Monitoring
    "sentry-sdk[fastapi]==2.19.2",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-httpx==0.35.0",
    "httpx==0.28.1",
    "ruff==0.8.6",
    "mypy==1.14.0",
    "pre-commit==4.0.1",
    "fakeredis[lua]==2.26.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "SIM", "ARG", "C4", "T10"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "alembic.*",
    "app.models.*",
    "app.schemas.*",
    "app.core.*",
    "app.api.*",
    "app.services.*",
    "app.ai.*",
    "app.scraper.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
